fix(gms): union aspect selections across DataLoader batches
Replace the request-shared DataFetchingEnvironment slot with a concurrent,
per-entity-type union of per-load aspect selections. This prevents aliased
siblings and batched entity fragments from under-fetching when they share a
DataLoader.

Make AspectMappingRegistry initialization explicitly depend on GraphQLEngine,
remove obsolete test-fixture dependency churn, and correct Dataset name's
aspect mapping.

Co-authored-by: Ben Blazke <benjiaming@users.noreply.github.com>